LIST OF CHANGES

 - npg_tracking::illumina::runfolder is simplified at a cost of loosing
   ability to pass to the constructor an arbitrary path
 - npg_tracking::illumina::run::short_info role - added database
   look-up aided ability to deal with arbitrary run folder names
 - use icons from the lates set of brand images
 - display institute's logo and favicon only if pages are servered
     from institute's servers
 - removed unnecessary aliasing of urls
 - deleted unused (dif_files_path and pb_cal_path) runfolder accessors

release 86.9
 - to account for ephemeral staging areas on OpenStack, extend staging
   directory path match expression in Apache httpd config file
 - use bash shell when executing system calls from Perl
 - copied srpipe::runfolder module (from SVN data_handling package)
   as npg_tracking::illumina::runfolder to this package, removed tests
   that depended on test folder hierarchy in the data_handling package

release 86.8
 - remove redundant script for reporting sequencing failures to RT
 - remove uptime info from instrument page - function no longer available
 - correct handling of transition from 'down for service' to 'down for repair'

release 86.7
 - stop building on Travis under Perl 5.16,
   see https://rt.cpan.org/Public/Bug/Display.html?id=123310
 - reference find role: when parsing a genome reference string 
   return the analysis, along with the organism, strain
   and transcriptome version, if present
 - refactor transcriptome::find to improve code reuse and add
   new find file/path/index attributes and functionalities
 - when inflating rpt key, cast id_run, position and tag index
   (if any) values to integers and raise an error if conversion
   gives a warning
 - unused tracking server features removed:
     simultaneous status update for multiple runs;
     simultaneous status update for multiple instruments;
     simultaneous mod update for multiple instruments;
     XML feeds for individual run statuses with listing of