@@ -39,14 +39,6 @@
    </tr>
   </thead>
   <tbody>
-   <tr>
-    <td>2007-10-02 11:02:52</td>
-    <td>up</td>
-    <td>joe_admin</td>
-    <td>networked </td>
-    <td>
-    </td>
-   </tr>
   </tbody>
  </table>
  </div>
@@ -86,7 +78,7 @@
  </div>
  
  <div id="selector_runs" style="display:none">
- <iframe width="100%" name="runs_on_instrument" height="300px" frameborder="0"  src="/cgi-bin/npg/run/?id_run_status_dict=all&id_instrument=11"></iframe>
+ <iframe width="100%" name="runs_on_instrument" height="400px" frameborder="0"  src="/cgi-bin/npg/run/?id_run_status_dict=all&id_instrument=11"></iframe>
  </div>
  </div>
  </div>
