@@ -7,7 +7,7 @@
  
  <div class="smaller_font_85">
  <span class="medium_header ">Page: </span>
- &middot;<a target="runs_on_instrument" class="active"  href="/cgi-bin/npg/run/3?id_run_status_dict=all&len=40&start=0&id_instrument_format=all&id_instrument=3" id="pagination_1" >1</a>&middot;
+ &middot;<a target="runs_on_instrument" class="active"  href="/cgi-bin/npg/run?id_run_status_dict=all&len=40&start=0&id_instrument_format=all&id_instrument=3" id="pagination_1" >1</a>&middot;
  </div>
  </div>
  <table id="runs" class="sortable zebra">
